[project]
name = "convert-pdf-to-png"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Nick Tyler", email = "nicholas.s.tyler.4@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["pyqt6>=6.9.1", "tqdm>=4.67.1", "wand>=0.6.13"]

[project.scripts]
convert-pdf-to-png = "convert_pdf_to_png:main"
test-pdf-to-png = "convert_pdf_to_png:test"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"
